# genesys.rs

./: Cargo.toml  README.md  flake.nix
src/: cards.rs  data.rs  error.rs  lib.rs  main.rs  prompt.rs
