[package]
name = "genesys"
version = "0.1.0"
edition = "2021"
authors = ["Shiloh"]
description = "A simple CLI for searching YGO cards"
license = "MIT"
keywords = ["yugioh", "cli"]
repository = "https://github.com/ShilohAlleyne/genesys.rs"
categories = ["command-line-utilities"]

[dependencies]
colored = "3.0.0"
inquire = "0.9.1"
itertools = "0.14.0"
reqwest = "0.12.23"
serde = "1.0.226"
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
webbrowser = "1.0.5"
